# someiprs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/recv_udp/: main.rs
src/lib/: lib.rs
src/lib/endpoint/: mod.rs  someip.rs  someip_decoder.rs  types.rs  udp_rx_endpoint.rs
src/lib/endpoint/udp/: decoder.rs  encoder.rs  encoder_multi.rs  mod.rs  reassembler.rs
src/lib/someip/: decoder.rs  desegmentation_task.rs  encoder.rs  mod.rs  tp_decoder.rs  types.rs
src/lib/util/: coder.rs  interval.rs  mod.rs
