[package]
name = "someip-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "someiprs"
path = "src/lib/lib.rs"

[[example]]
name = "recv-udp"
path = "examples/recv_udp/main.rs"

[dependencies]
bytes = { version = "1" }
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.7",  features = ["codec"] }
